--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@helperdiscord/vote",
-  "version": "1.0.2",
+  "version": "1.2.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+		"build": "tsc -p .",
+		"prepack": "npm build"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,10 @@
   "homepage": "https://github.com/helperdiscord/vote-client#readme",
   "dependencies": {
     "@helperdiscord/centra": "^1.0.7"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.20",
+    "typescript": "^4.1.3"
   },
   "engines": {
     "node": ">=14.0.0"
