--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "@helperdiscord/vote",
-  "version": "1.2.5",
+  "version": "1.3.0",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc -p .",
-    "prepack": "npm build"
+    "clean": "rimraf dist/*",
+    "build": "npm run clean && tsup src/index.ts --format esm,cjs,iife --dts --minify",
+    "prepare": "npm run build",
+    "doc": "typedoc src/*",
+    "release": "npm run build && npm run doc"
   },
   "repository": {
     "type": "git",
@@ -22,6 +25,7 @@
   },
   "devDependencies": {
     "@types/node": "^14.14.20",
+    "rimraf": "^3.0.2",
     "tsup": "^3.11.0",
     "typescript": "^4.1.3"
   },
