--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "release": "npm run build && npm run doc"
   },
   "files": [
-		"dist",
-		"!dist/*.tsbuildinfo"
-	],
-	"exports": {
-		"require": "./dist/index.js",
-		"import": "./dist/index.mjs"
-	},
+    "dist",
+    "!dist/*.tsbuildinfo"
+  ],
+  "exports": {
+    "require": "./dist/index.js",
+    "import": "./dist/index.mjs"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/helperdiscord/vote-client.git"
@@ -38,7 +38,6 @@
     "node": ">=14.0.0"
   },
   "dependencies": {
-    "petitio": "^1.1.0",
-    "undici": "^3.3.3"
+    "petitio": "^1.1.0"
   }
 }
